--- a/note/flake8.html
+++ b/note/flake8.html
@@ -63,16 +63,16 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>flake8</h1>
-<div class="title-date">2020년 4월 18일 수정</div>
+<div class="title-date">2020년 4월 19일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6082539">설치법</a></li>
-<li><a href="#orgf77dfdb">사용법</a></li>
-<li><a href="#orga033bbe">설정 파일</a></li>
-<li><a href="#org665d728">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#org9c44dfa">외부 링크</a></li>
+<li><a href="#orgc0edd64">설치</a></li>
+<li><a href="#org6108635">사용법</a></li>
+<li><a href="#org950bef3">설정 파일</a></li>
+<li><a href="#org890e46f">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#orgacb6932">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -84,11 +84,11 @@ gtag('config', 'UA-44534026-1');
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-org6082539" class="outline-2">
-<h2 id="org6082539">설치법</h2>
-<div class="outline-text-2" id="text-org6082539">
+<div id="outline-container-orgc0edd64" class="outline-2">
+<h2 id="orgc0edd64">설치</h2>
+<div class="outline-text-2" id="text-orgc0edd64">
 <p>
-파이썬 패키지이기 때문에 pip로 그냥 설치할 수 있다.
+파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash">pip install flake8
@@ -96,9 +96,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgf77dfdb" class="outline-2">
-<h2 id="orgf77dfdb">사용법</h2>
-<div class="outline-text-2" id="text-orgf77dfdb">
+<div id="outline-container-org6108635" class="outline-2">
+<h2 id="org6108635">사용법</h2>
+<div class="outline-text-2" id="text-org6108635">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -118,9 +118,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga033bbe" class="outline-2">
-<h2 id="orga033bbe">설정 파일</h2>
-<div class="outline-text-2" id="text-orga033bbe">
+<div id="outline-container-org950bef3" class="outline-2">
+<h2 id="org950bef3">설정 파일</h2>
+<div class="outline-text-2" id="text-org950bef3">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -152,9 +152,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-org665d728" class="outline-2">
-<h2 id="org665d728">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-org665d728">
+<div id="outline-container-org890e46f" class="outline-2">
+<h2 id="org890e46f">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-org890e46f">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -187,9 +187,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-org9c44dfa" class="outline-2">
-<h2 id="org9c44dfa">외부 링크</h2>
-<div class="outline-text-2" id="text-org9c44dfa">
+<div id="outline-container-orgacb6932" class="outline-2">
+<h2 id="orgacb6932">외부 링크</h2>
+<div class="outline-text-2" id="text-orgacb6932">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
