--- a/note/flutter.html
+++ b/note/flutter.html
@@ -68,10 +68,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org19f2c51">문제 해결</a>
+<li><a href="#org84b33fe">문제 해결</a>
 <ul>
-<li><a href="#org3783a34">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org5c5da53">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#orgb9b4b40">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#orgecf0e0a">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -87,20 +87,20 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org19f2c51" class="outline-2">
-<h2 id="org19f2c51">문제 해결</h2>
-<div class="outline-text-2" id="text-org19f2c51">
+<div id="outline-container-org84b33fe" class="outline-2">
+<h2 id="org84b33fe">문제 해결</h2>
+<div class="outline-text-2" id="text-org84b33fe">
 </div>
-<div id="outline-container-org3783a34" class="outline-3">
-<h3 id="org3783a34">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org3783a34">
+<div id="outline-container-orgb9b4b40" class="outline-3">
+<h3 id="orgb9b4b40">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-orgb9b4b40">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
 </p>
 <blockquote>
 <p>
-Flutter "idevice<sub>id</sub>" cannot be opened because the developer cannot be verified
+Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot be verified
 </p>
 </blockquote>
 <p>
@@ -126,9 +126,9 @@ Flutter "idevice<sub>id</sub>" cannot be opened because the developer cannot be 
 </p>
 </div>
 </div>
-<div id="outline-container-org5c5da53" class="outline-3">
-<h3 id="org5c5da53">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org5c5da53">
+<div id="outline-container-orgecf0e0a" class="outline-3">
+<h3 id="orgecf0e0a">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-orgecf0e0a">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
