--- a/note/javascript.html
+++ b/note/javascript.html
@@ -68,20 +68,21 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgeccdb25">노트</a>
+<li><a href="#orgecab6f1">노트</a>
 <ul>
-<li><a href="#orge66d598">모듈(Module)</a></li>
-<li><a href="#org4f55676">스프레드(Spreads) 연산자</a></li>
-<li><a href="#org2025947">튜플 비슷한 문법</a></li>
+<li><a href="#org071f1e3">모듈(Module)</a></li>
+<li><a href="#org2618bc9">스프레드(Spreads) 연산자</a></li>
+<li><a href="#org14f13ef">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#orga7e13f9">실전(?) 메모</a>
+<li><a href="#org69db176">실전(?) 메모</a>
 <ul>
-<li><a href="#org0aede64">특정 블록에 HTML 넣기</a></li>
-<li><a href="#orgc4b4f54">콘텐츠 높이 구하기</a></li>
-<li><a href="#org62b3872">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#org5ac2db0">특정 블록에 HTML 넣기</a></li>
+<li><a href="#org709af99">콘텐츠 높이 구하기</a></li>
+<li><a href="#org506d665">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
+<li><a href="#org9b9a867">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -98,17 +99,18 @@ gtag('config', 'UA-44534026-1');
 현재로써 이 둘을 별도로 생각하는 것도 좀 이상한 것 같기도 하다.
 버전은 ES6를 기준으로 한다.
 </p>
-<div id="outline-container-orgeccdb25" class="outline-2">
-<h2 id="orgeccdb25">노트</h2>
-<div class="outline-text-2" id="text-orgeccdb25">
+
+<div id="outline-container-orgecab6f1" class="outline-2">
+<h2 id="orgecab6f1">노트</h2>
+<div class="outline-text-2" id="text-orgecab6f1">
 <p>
 여기에 붙는 글들은 정해진 주제 없이 필요할 때 마다 붙는 메모 형식으로
 작성됩니다. 후에 글이 모이면 별도의 글로 분리될 수도 있습니다.
 </p>
 </div>
-<div id="outline-container-orge66d598" class="outline-3">
-<h3 id="orge66d598">모듈(Module)</h3>
-<div class="outline-text-3" id="text-orge66d598">
+<div id="outline-container-org071f1e3" class="outline-3">
+<h3 id="org071f1e3">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org071f1e3">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -160,9 +162,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org4f55676" class="outline-3">
-<h3 id="org4f55676">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org4f55676">
+<div id="outline-container-org2618bc9" class="outline-3">
+<h3 id="org2618bc9">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org2618bc9">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -223,9 +225,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2025947" class="outline-3">
-<h3 id="org2025947">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-org2025947">
+<div id="outline-container-org14f13ef" class="outline-3">
+<h3 id="org14f13ef">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-org14f13ef">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -237,13 +239,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-orga7e13f9" class="outline-2">
-<h2 id="orga7e13f9">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-orga7e13f9">
+<div id="outline-container-org69db176" class="outline-2">
+<h2 id="org69db176">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org69db176">
 </div>
-<div id="outline-container-org0aede64" class="outline-3">
-<h3 id="org0aede64">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-org0aede64">
+<div id="outline-container-org5ac2db0" class="outline-3">
+<h3 id="org5ac2db0">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-org5ac2db0">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -253,9 +255,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgc4b4f54" class="outline-3">
-<h3 id="orgc4b4f54">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-orgc4b4f54">
+<div id="outline-container-org709af99" class="outline-3">
+<h3 id="org709af99">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-org709af99">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -275,9 +277,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-org62b3872" class="outline-3">
-<h3 id="org62b3872">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-org62b3872">
+<div id="outline-container-org506d665" class="outline-3">
+<h3 id="org506d665">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-org506d665">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -302,6 +304,15 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 참고로 <code>afterbegin</code>, <code>beforeend</code>, <code>afterend</code> 등 다양한 위치를 지정할 수 있다.
 </p>
 </div>
+</div>
+</div>
+<div id="outline-container-org9b9a867" class="outline-2">
+<h2 id="org9b9a867">외부 링크</h2>
+<div class="outline-text-2" id="text-org9b9a867">
+<ul class="org-ul">
+<li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
+<li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
+</ul>
 </div>
 </div>
 <div id="footnotes">
