--- a/note/macos.html
+++ b/note/macos.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org56ab918">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org0623f10">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org0c82541">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org571c1c2">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org51173a5">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org5ff77f8">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -95,17 +95,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org56ab918" class="outline-2">
-<h2 id="org56ab918">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org56ab918">
+<div id="outline-container-org571c1c2" class="outline-2">
+<h2 id="org571c1c2">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org571c1c2">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org0623f10" class="outline-2">
-<h2 id="org0623f10">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org0623f10">
+<div id="outline-container-org51173a5" class="outline-2">
+<h2 id="org51173a5">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org51173a5">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -125,9 +125,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0c82541" class="outline-2">
-<h2 id="org0c82541">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org0c82541">
+<div id="outline-container-org5ff77f8" class="outline-2">
+<h2 id="org5ff77f8">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org5ff77f8">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -149,9 +149,30 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
 <div class="article-link-date">
-2020년 4월 18일 수정</div>
+2020년 4월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -170,30 +191,9 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/homebrew.html">Homebrew</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 16일 수정</div>
 </div>
 </div>
 <div class="article-link">
