--- a/note/python.html
+++ b/note/python.html
@@ -63,24 +63,30 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Python</h1>
-<div class="title-date">2020년 4월 17일 수정</div>
+<div class="title-date">2020년 4월 19일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org2563dbd">설치</a></li>
-<li><a href="#org474fc12">버전 별 정리</a>
+<li><a href="#org7914baf">설치</a></li>
+<li><a href="#org2662ba7">버전 별 정리</a>
 <ul>
-<li><a href="#orgd3585e2">3.8</a></li>
+<li><a href="#org0bf4a26">3.8</a></li>
 </ul>
 </li>
-<li><a href="#org88fe13a">메모</a>
+<li><a href="#orga28525c">메모</a>
 <ul>
-<li><a href="#org7dd3ddb">List Comprehension</a></li>
-<li><a href="#orgbbdf0c6">파일 혹은 디렉토리(폴더) 관련</a></li>
+<li><a href="#org127419d">Bytes</a></li>
+<li><a href="#org3214f32">List Comprehension</a></li>
+<li><a href="#org7578849">파일 혹은 디렉토리(폴더) 관련</a></li>
 </ul>
 </li>
-<li><a href="#org1e33eb9">외부 링크</a></li>
+<li><a href="#orgb90a42c">커맨드</a>
+<ul>
+<li><a href="#orga506fb5">간단한 웹 서버 띄우기</a></li>
+</ul>
+</li>
+<li><a href="#org37d17bd">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +98,9 @@ gtag('config', 'UA-44534026-1');
 언어라는 점이 가장 큰 특징이다.
 </p>
 
-<div id="outline-container-org2563dbd" class="outline-2">
-<h2 id="org2563dbd">설치</h2>
-<div class="outline-text-2" id="text-org2563dbd">
+<div id="outline-container-org7914baf" class="outline-2">
+<h2 id="org7914baf">설치</h2>
+<div class="outline-text-2" id="text-org7914baf">
 <p>
 <a href="macos.html">macOS</a> 의 경우
 <a href="homebrew.html">Homebrew</a> 를 통해 설치하거나
@@ -114,13 +120,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org474fc12" class="outline-2">
-<h2 id="org474fc12">버전 별 정리</h2>
-<div class="outline-text-2" id="text-org474fc12">
+<div id="outline-container-org2662ba7" class="outline-2">
+<h2 id="org2662ba7">버전 별 정리</h2>
+<div class="outline-text-2" id="text-org2662ba7">
 </div>
-<div id="outline-container-orgd3585e2" class="outline-3">
-<h3 id="orgd3585e2">3.8</h3>
-<div class="outline-text-3" id="text-orgd3585e2">
+<div id="outline-container-org0bf4a26" class="outline-3">
+<h3 id="org0bf4a26">3.8</h3>
+<div class="outline-text-3" id="text-org0bf4a26">
 <dl class="org-dl">
 <dt><code>:=</code> (Walrus) 오페레이터</dt><dd>좁은(?) 지역 변수.
 <a href="swift.html">Swift</a> 의 <code>if let</code> 과 용도가 비슷하다.
@@ -137,25 +143,49 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org88fe13a" class="outline-2">
-<h2 id="org88fe13a">메모</h2>
-<div class="outline-text-2" id="text-org88fe13a">
+<div id="outline-container-orga28525c" class="outline-2">
+<h2 id="orga28525c">메모</h2>
+<div class="outline-text-2" id="text-orga28525c">
 </div>
-<div id="outline-container-org7dd3ddb" class="outline-3">
-<h3 id="org7dd3ddb">List Comprehension</h3>
-<div class="outline-text-3" id="text-org7dd3ddb">
+<div id="outline-container-org127419d" class="outline-3">
+<h3 id="org127419d">Bytes</h3>
+<div class="outline-text-3" id="text-org127419d">
+<div class="org-src-container">
+<pre class="src src-python">b<span style="color: #83898d;">'some string'</span>
+</pre>
+</div>
+<p>
+Binary String 혹은 <code>binstring</code> 이라 부르는 타입이다.
+</p>
+
+<p>
+바이트 배열과의 관계는 이렇다.
+</p>
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; <span style="color: #dcaeea;">b</span> = b<span style="color: #98be65;">'binstring'</span>
+&gt;&gt;&gt; <span style="color: #dcaeea;">ba</span> = <span style="color: #c678dd;">bytearray</span>(b)
+&gt;&gt;&gt; <span style="color: #dcaeea;">bb</span> = <span style="color: #c678dd;">bytes</span>(ba)
+&gt;&gt;&gt; b == bb
+<span style="color: #a9a1e1;">True</span>
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org3214f32" class="outline-3">
+<h3 id="org3214f32">List Comprehension</h3>
+<div class="outline-text-3" id="text-org3214f32">
 </div>
 <ul class="org-ul">
-<li><a id="orgbcd7729"></a>Map<br />
-<div class="outline-text-4" id="text-orgbcd7729">
+<li><a id="orged0feb1"></a>Map<br />
+<div class="outline-text-4" id="text-orged0feb1">
 <div class="org-src-container">
 <pre class="src src-python">[x * x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist]
 </pre>
 </div>
 </div>
 </li>
-<li><a id="orgdeb3327"></a>Filter<br />
-<div class="outline-text-4" id="text-orgdeb3327">
+<li><a id="org65b61bd"></a>Filter<br />
+<div class="outline-text-4" id="text-org65b61bd">
 <div class="org-src-container">
 <pre class="src src-python">[x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist <span style="color: #51afef;">if</span> iswhat(x)]
 </pre>
@@ -164,13 +194,13 @@ gtag('config', 'UA-44534026-1');
 </li>
 </ul>
 </div>
-<div id="outline-container-orgbbdf0c6" class="outline-3">
-<h3 id="orgbbdf0c6">파일 혹은 디렉토리(폴더) 관련</h3>
-<div class="outline-text-3" id="text-orgbbdf0c6">
+<div id="outline-container-org7578849" class="outline-3">
+<h3 id="org7578849">파일 혹은 디렉토리(폴더) 관련</h3>
+<div class="outline-text-3" id="text-org7578849">
 </div>
 <ul class="org-ul">
-<li><a id="org5983e3a"></a>경로에서 파일명만 얻기<br />
-<div class="outline-text-4" id="text-org5983e3a">
+<li><a id="orge76478e"></a>경로에서 파일명만 얻기<br />
+<div class="outline-text-4" id="text-orge76478e">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.basename(<span style="color: #98be65;">'/foo/bar/test.txt'</span>)
@@ -179,8 +209,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="orge1cc741"></a>파일명에서 확장자 분리하기<br />
-<div class="outline-text-4" id="text-orge1cc741">
+<li><a id="orgd341f4c"></a>파일명에서 확장자 분리하기<br />
+<div class="outline-text-4" id="text-orgd341f4c">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.splitext(<span style="color: #98be65;">'test.txt'</span>)
@@ -194,8 +224,8 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </li>
-<li><a id="org3e7a7c4"></a>파일 혹은 디렉토리 구분하기<br />
-<div class="outline-text-4" id="text-org3e7a7c4">
+<li><a id="orge99e41a"></a>파일 혹은 디렉토리 구분하기<br />
+<div class="outline-text-4" id="text-orge99e41a">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.isfile(<span style="color: #98be65;">'/foo/bar/some/file.txt'</span>)
@@ -206,8 +236,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="org325e27e"></a>디렉토리 안의 파일 목록 얻기<br />
-<div class="outline-text-4" id="text-org325e27e">
+<li><a id="org2429b0e"></a>디렉토리 안의 파일 목록 얻기<br />
+<div class="outline-text-4" id="text-org2429b0e">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.listdir(<span style="color: #98be65;">'.'</span>)
@@ -219,9 +249,26 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org1e33eb9" class="outline-2">
-<h2 id="org1e33eb9">외부 링크</h2>
-<div class="outline-text-2" id="text-org1e33eb9">
+<div id="outline-container-orgb90a42c" class="outline-2">
+<h2 id="orgb90a42c">커맨드</h2>
+<div class="outline-text-2" id="text-orgb90a42c">
+</div>
+<div id="outline-container-orga506fb5" class="outline-3">
+<h3 id="orga506fb5">간단한 웹 서버 띄우기</h3>
+<div class="outline-text-3" id="text-orga506fb5">
+<div class="org-src-container">
+<pre class="src src-bash">python -m http.server
+</pre>
+</div>
+<p>
+Python 3 부터 사용 가능한 커맨드다.
+</p>
+</div>
+</div>
+</div>
+<div id="outline-container-org37d17bd" class="outline-2">
+<h2 id="org37d17bd">외부 링크</h2>
+<div class="outline-text-2" id="text-org37d17bd">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/76">🌏Python에 F-string 이라는 게 있었다?</a></li>
 <li><a target="_blank" href="https://seorenn.tistory.com/77">🌏Python 3 정적 타이핑 소개 및 소감(?)</a></li>
@@ -233,23 +280,30 @@ gtag('config', 'UA-44534026-1');
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
+<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
 <div class="article-link-date">
-2020년 4월 18일 수정</div>
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pip.html">pip</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/flake8.html">flake8</a></h2>
 <div class="article-link-date">
-2020년 4월 18일 수정</div>
+2020년 4월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
+<h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
 <div class="article-link-date">
-2020년 4월 17일 수정</div>
+2020년 4월 18일 수정</div>
 </div>
 </div>
 </div>
