--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -63,7 +63,7 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>특수 문자 이름</h1>
-<div class="title-date">2020년 4월 19일 수정</div>
+<div class="title-date">2020년 4월 20일 수정</div>
 </header>
 <p>
 가끔 특수 문자 이름이 궁금해서 찾아 볼 때가 있는데 이럴 때마다 정리하는 글이다.
@@ -89,8 +89,8 @@ gtag('config', 'UA-44534026-1');
 <tbody>
 <tr>
 <td class="org-left"><code>`</code></td>
-<td class="org-left">Back Tick, Grave(억음 부호), Back Quote(역 따옴표)</td>
-<td class="org-left">역 따옴표</td>
+<td class="org-left">Back Tick, Grave, Back Quote</td>
+<td class="org-left">억음 부호, 역 따옴표</td>
 </tr>
 
 <tr>
@@ -122,9 +122,53 @@ gtag('config', 'UA-44534026-1');
 <td class="org-left">At Sign, Commercial At</td>
 <td class="org-left">앳, 골뱅이</td>
 </tr>
+
+<tr>
+<td class="org-left"><code>*</code></td>
+<td class="org-left">Asterisk</td>
+<td class="org-left">별표</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>(</code>, <code>)</code></td>
+<td class="org-left">Left Parenthesis, Right Parenthesis</td>
+<td class="org-left">괄호(열기), 괄호(닫기)</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>{</code>, <code>}</code></td>
+<td class="org-left">Left Brace, Right Brace</td>
+<td class="org-left">중괄호(열기), 중괄호(닫기)</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>[</code>, <code>]</code></td>
+<td class="org-left">Left Bracket, Right Bracket</td>
+<td class="org-left">대괄호(열기), 대괄호(닫기)</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>"</code></td>
+<td class="org-left">Quotation Mark</td>
+<td class="org-left">큰 따옴표</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>'</code></td>
+<td class="org-left">Apostrophe</td>
+<td class="org-left">작은 따옴표<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></td>
+</tr>
 </tbody>
 </table>
-</section>
+<div id="footnotes">
+<h2 class="footnotes">🀱 각주 (Footnotes)</h2>
+<div id="text-footnotes">
+
+<div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1">1</a></sup> <div class="footpara"><p class="footpara">Apostrophe와 작은 따옴표는 원래 용도가 다르다. 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</p></div></div>
+
+
+</div>
+</div></section>
 <div class="top-ad">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
