--- a/note/macos.html
+++ b/note/macos.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org571c1c2">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org51173a5">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org5ff77f8">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgb4fed96">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orge0d06f9">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgf0233ce">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -95,17 +95,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org571c1c2" class="outline-2">
-<h2 id="org571c1c2">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org571c1c2">
+<div id="outline-container-orgb4fed96" class="outline-2">
+<h2 id="orgb4fed96">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgb4fed96">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org51173a5" class="outline-2">
-<h2 id="org51173a5">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org51173a5">
+<div id="outline-container-orge0d06f9" class="outline-2">
+<h2 id="orge0d06f9">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orge0d06f9">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -125,9 +125,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5ff77f8" class="outline-2">
-<h2 id="org5ff77f8">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org5ff77f8">
+<div id="outline-container-orgf0233ce" class="outline-2">
+<h2 id="orgf0233ce">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgf0233ce">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -147,6 +147,13 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/carthage.html">Carthage</a></h2>
+<div class="article-link-date">
+2020년 4월 20일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
